# SSPlayerForCCH

./: .gitignore  LICENSE  README.md
Converter/: CHANGELOG.txt  CMakeLists.txt  copy_release.bat
Converter/dll/mac/Release/: libSsConverterLib.dylib
Converter/dll/win/Debug/: SsConverter.exp  SsConverter.lib
Converter/dll/win/Release/: SsConverter.exp  SsConverter.lib
Converter/src/common/: BinaryDataWriter.h  Canvas2dSaver.cpp  Canvas2dSaver.h  Cocos2dSaver.cpp  Cocos2dSaver.h  CoronaSaver.cpp  CoronaSaver.h  FileUtil.h  SaverUtil.cpp  SsMotion.cpp  SsMotion.h  SsMotionDecoder.cpp  SsMotionDecoder.h  SsMotionUtil.cpp  SsMotionUtil.h  SsaxLoader.cpp  SsfLoader.cpp  SsfLoader.h
Converter/src/converter/: CHANGELOG.txt  ConverterShared.cpp  ConverterShared.h  SsToCocos2d.cpp  SsToCorona.cpp  SsToHtml5.cpp
Converter/vc2010/SsPlayerConverter/DynamicLib/: SsConverter.sln  SsConverter.vcxproj
Converter/vc2010/SsPlayerConverter/SsToCocos2d/: main.cpp
Converter/vc2010/SsPlayerConverter/SsToCorona/: SsToCorona.vcxproj  main.cpp
Converter/vc2010/SsPlayerConverter/SsToHtml5/: SsToHtml5.vcxproj  main.cpp
Converter/vc2010/SsPlayerConverter/StaticLib/: StaticLib.vcxproj
Converter/xcode4.6/SsPlayerConverter/DynamicLib/SsConverterLib.xcodeproj/: project.pbxproj
Converter/xcode4.6/SsPlayerConverter/SsPlayerConverter.xcworkspace/: contents.xcworkspacedata
Converter/xcode4.6/SsPlayerConverter/SsToCocos2d/SsToCocos2d/: SsToCocos2d.1  main.cpp
Converter/xcode4.6/SsPlayerConverter/SsToCocos2d/SsToCocos2d.xcodeproj/: project.pbxproj
Converter/xcode4.6/SsPlayerConverter/SsToCorona/SsToCorona/: SsToCorona.1  main.cpp
Converter/xcode4.6/SsPlayerConverter/SsToCorona/SsToCorona.xcodeproj/: project.pbxproj
Converter/xcode4.6/SsPlayerConverter/SsToHtml5/SsToHtml5.xcodeproj/: project.pbxproj
Converter/xcode4.6/SsPlayerConverter/StaticLib/StaticLib.xcodeproj/: project.pbxproj
Player/Cocos2dx3Player/: SSPlayer.cpp  SSPlayer.h  SSPlayerData.h
Player/Cocos2dxPlayer/: CHANGELOG.txt  SSPlayer.cpp  SSPlayer.h  SSPlayerData.h  ssShader_frag.h
Player/CoronaPlayer/: CHANGELOG.txt  SsPlayer.lua
Player/Html5Player/: Html5Player.sln
Samples/: SAMPLE.md
Samples/Cocos2d-x/: readme.txt
(+158 files in other folders)
